# opentgytbot

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  bot.py  config.py  download_queue.py  logger.py  main.py  pyproject.toml  requirements.txt  start.sh  youtube-bot.service
